AO3-4350 Fix off-center homepage

--- a/public/stylesheets/site/2.0/26-media-narrow.css
+++ b/public/stylesheets/site/2.0/26-media-narrow.css
@@ -140,7 +140,8 @@ body .narrow-shown {
   padding: 0;
 }
 
-.splash div.module, .logged-in .splash .module {
+.splash div.module, .logged-in .splash > .module {
+  margin: auto 1%;
   width: 98%;
 }
 
